Fix low-contrast links
Fix #141

--- a/app/styles/components/artist-items.styl
+++ b/app/styles/components/artist-items.styl
@@ -35,6 +35,12 @@
         @extend .col-sm-2
         @extend .col-sm-push-1
 
+    .row > .action > .link
+        @extend .btn
+        @extend .btn-primary
+        font-weight: bold
+
+
     .row > .noitems
         @extend .col-sm-10
         @extend .col-sm-push-1
