--- a/app/styles/components/login-form.styl
+++ b/app/styles/components/login-form.styl
@@ -11,6 +11,7 @@
     a
         margin-bottom: 15px
         display: block
+        color: #3e3e3e
 
     .button
         @extend .btn
